# pytest-prysk

./: README.md  justfile  pyproject.toml  tasks.py
.github/: dependabot.yml
.github/actions/env/: action.yml
.github/actions/python-environment/: action.yml
.github/workflows/: checks.yml  ci-cd.yml  ci.yml  pr-merge.yml
doc/: contributors.md
doc/changes/: changes_0.3.0.md  changes_0.4.0.md  unreleased.md
pytest_prysk/: __init__.py
test/unit/: pytest_prysk_test.py
