[tool.poetry]
name = "pytest-prysk"
version = "0.3.0"
authors = ["Nicola Coretti <nico.coretti@gmail.com>"]
description = "Pytest plugin for prysk"
repository = "https://github.com/prysk/pytest-prysk"
homepage = "https://nicoretti.github.io/prysk/"
license = "GPL-2.0-or-later"
readme = "README.md"

packages = [{include = "pytest_prysk"}]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Unix Shell",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
]
keywords = [
    "snapshot testing",
    "functional-tests",
    "testing",
    "pytest",
    "plugin",
]


[tool.poetry.dependencies]
python = "^3.8"
pytest = ">=7.3.2"
prysk = ">=0.15.0"


[tool.poetry.plugins.pytest11]
prysk = "pytest_prysk"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
